--- a/templates/login.html
+++ b/templates/login.html
@@ -2,21 +2,22 @@
 
 {% block content %}
 	<style type="text/css">
-		h1{
-			color: green;
-		}
+		h1{color: green;}
 	</style>
 	<center>
 		<form action="" method="POST">
 			{{form.hidden_tag ()}}
-			<br><br><br><br><br><br>
+			<br><br><br><br>
 			<h1> Sign In </h1>
-				<h3>{{form.firstname.label}} </h3>
-				{{form.firstname(size=40)}} 
-				<h3>{{form.lastname.label}}</h3> 
-				{{form.lastname(size=40)}}
-				<h3>{{form.password.label}}</h3> 
-				{{form.password(size=40)}} <br><br>
+				{{form.firstname(size=30, placeholder="First name")}}
+				{{form.lastname(size=30, placeholder="Last name")}} 
+				<br><br>
+				{{form.password(size=30, placeholder="Password")}}
+				{{form.confirm_password(size=30, placeholder="Confirm Password")}}
+				<br><br>
+				{{form.email(size=30, placeholder="e-mail")}}
+				{{form.confirm_email(size=30, placeholder="e-mail")}}
+				<br><br>
 				{{form.acces ()}}
 		</form>
 	</center>
