--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block content %}
+	<form action="" method="POST">
+		{{form.hidden_tag()}}
+		<center>
+			<br><br><br><br><br><br><br>
+			<p>
+				{{form.email.label}} <br>
+				{{form.email(size=30)}}
+			</p>
+			<p>
+				{{form.password.label}} <br>
+				{{form.password(size=30)}}
+			</p>
+			<p> {{form.acces ()}} </p>
+		</center>
+		
+	</form>
+
+{% endblock %}
