--- a/templates/login.html
+++ b/templates/login.html
@@ -5,14 +5,9 @@
 		{{form.hidden_tag()}}
 		<center>
 			<br><br><br><br><br><br><br>
-			<p>
-				{{form.email.label}} <br>
-				{{form.email(size=30)}}
-			</p>
-			<p>
-				{{form.password.label}} <br>
-				{{form.password(size=30)}}
-			</p>
+			<p>Log In</p>
+			<p> {{form.email(size=30, placeholder = "email")}} </p>
+			<p> {{form.password(size=30, placeholder = "password")}} </p>
 			<p> {{form.acces ()}} </p>
 		</center>
 		
